--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -40,8 +40,11 @@
                     <ul class="a_bloques">
                         <li id="te_li_lista">
                             <input type="checkbox" name="check_name" id="b_1">
-                            <label class="styled1 note rounded" for="b_1">item 1</label>
+                            <label class="styled1 note rounded" for="b_1">
+                                item 1
+                            </label>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
