--- a/WebLegemClient/src/css/noticias.css
+++ b/WebLegemClient/src/css/noticias.css
@@ -1,279 +1,24 @@
 ﻿.contenido_noticias {
-    width: 100%;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 20px;
-    font-family: Arial, "Helvetica", sans-serif;
-    background:#fff;
-}
-
-
-.divisor_news{
-    border:2px solid rgb(169, 171, 174);
-}
-
-.titulo_news{
-    color:#515c68;
-    font-size:1.5em;
-}
-
-.tablero_noticias {
-    margin-left:15px;
-
-    display:flex;
-    display: -webkit-flex;
-}
-
-
-.principales_news{
-    height:50vh;
-
-    display:flex;
-    display: -webkit-flex;
-    margin:10px 0;
-}
-
-
-.col1{
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    margin-top:100px;
     height:100%;
-    background:rgba(100, 137,0,1);
-    flex-grow:2;
-}
-.col2{
-    height:100%;
-    background:blue;
-    flex-grow:1;
-    -webkit-flex-direction:column;
-    flex-direction:column;
-}
-
-.col2_1{
-    background:greenyellow;
-    margin:10px;
-    height:30%;
-    flex-grow:1;
-}
-
-
-.documentos_news{
-    background:red;
-    display:flex;
-    display: -webkit-flex;
-    height:40px;
-    flex-direction:row;
-    justify-content:space-between;
-    
-    
-}
-.post_documentos{
-    margin:10px;
-    height:30px;
-    flex-grow:1;
-    background:blue;
+    width:100%;
     
 }
 
-.masonry .noticia {
-    display: inline-block;
-    width: calc(100% - 50px);
-    height: 400px;
-    margin: 0 20px 20px 0;
-    padding: 20px;
-    border: none;
-    background-color: white;
-}
-
-.masonry .post:hover {
-    background-color:#E2FBD3;
-}
-
-.noticia {
-    text-align: justify;
-    height: 60px;
-    overflow: hidden;  
-}
-
-.noticia > p {
-    text-align: justify;
-    height: 60px;
-    overflow: hidden;  
-}
-    
-.post > label {
-    color:blue;
-     font-weight:bold;
-   
-    
-}
-.post >label:hover {
-    color:greenyellow;
-    
-} 
-    .masonry .noticia iframe{        
-    max-width: 100%;  
-    max-height:unset;
-    display: block;   
-    background-color:black; 
-    color:white;
-    }
-
-
-.masonry .noticia img {
-    height:50%;
-    max-width: 100%;  
-    max-height:unset;
-    display: block;   
-    background-color:black; 
-    color:white;
-}
-
-
-.masonry h1, .masonry h2 {
-    -ms-word-wrap: break-word;
-    word-wrap: break-word;
-    color:#515c68;
-    font-size:1.1em;
-}
-
-@media (min-width: 480px) {
-    .masonry {
-        column-count: 2;
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-    }
-}
-@media (min-width: 768px) {
-    .masonry {
-        column-count: 3;  
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-    }
-}
-@media (min-width: 992px) {
-    .masonry {
-        column-count: 3;
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-    }
-}
-
-
-
-#theme-footer {
-    position: relative;
-    color: #fff;
-    font-family:'Franklin Gothic';  
-    background:  #37404A;
-    padding: 50px 0;
-    border-top: 3px solid rgba(100, 137,0,1);
-    height: 200px;
-    -webkit-box-shadow: 0 -8px 0 rgba(0, 0, 0, .1);
-    -moz-box-shadow: 0 -8px 0 rgba(0, 0, 0, .1);
-    box-shadow: 0 -8px 0 rgba(0, 0, 0, .1);
-}
-
-
-
-#theme-footer a  {
-    color: #fff;
-    font-family:'Franklin Gothic';
-   }
-
- 
-#theme-footer a:hover {
-    color: rgba(100, 137,0,1);
-}
-
-#footer-widget-area {
+.contenido_noticias:before {
+    content: '';
+    background-image: url('../recursos/header/paisaje.jpg');
+    background-size: cover;
     width: 100%;
-    margin: 0 auto;
-}
-
-.footer-widgets-box {
-    float: left;
-    margin-right: 4%;
-}
-
-.footer-1c .footer-widgets-box {
-    width: 90%
-}
-
-.footer-2c .footer-widgets-box {
-    width: 48%;
-}
-
-.footer-3c .footer-widgets-box {
-    width: 30.66666666666667%;
-}
-
-.footer-4c .footer-widgets-box {
-    width: 22%;
-}
-
-.narrow-wide-2c #footer-first,
-.wide-narrow-2c #footer-second {
-    width: 32%;
-}
-
-.narrow-wide-2c #footer-second,
-.wide-narrow-2c #footer-first {
-    width: 64%;
-}
-
-.wide-left-3c #footer-first,
-.wide-right-3c #footer-third {
-    width: 46%;
-}
-
-.wide-left-3c .footer-widgets-box,
-.wide-right-3c .footer-widgets-box {
-    width: 23%;
-}
-
-.footer-1c .footer-widgets-box,
-.narrow-wide-2c #footer-second,
-.wide-narrow-2c #footer-second,
-.footer-2c #footer-second,
-.footer-3c #footer-third,
-.footer-4c #footer-fourth,
-.wide-right-3c #footer-third,
-.wide-left-3c #footer-third {
-    margin-right:0;      
-}
-
-.footer-widget-top {
-    border-bottom: 1px solid rgba(100, 137,0,1);
-    padding: 20px 0;
-    margin-left:10px;
-    margin-right:10px;
-   
-}
-
-.footer-widget-top h4 {
-    font-size:18px;
-    font-family:arial;
-    height:1px;
-    font-weight:bold;
-    margin-top:1px;
-}
-
-.footer-widget-container {
-    padding: 10px 0;
-    border-top: 1px solid  rgba(100, 137,0,1);
-    margin-right:10px; 
-    margin-left:10px;    
-}
-
-.footer-widget-container p {
-    padding-bottom: 1.0em;
-    margin:5px;
-    margin-right:10px;
-}
-
-.footer-widget-container li,
-#theme-footer  {
-    padding: 6px  0;
-    line-height: 18px;
-    overflow: hidden;
-    border-bottom: 1px solid  rgba(100, 137,0,1);
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
