--- a/WebLegemClient/src/css/plantillas/busqueda.css
+++ b/WebLegemClient/src/css/plantillas/busqueda.css
@@ -1,4 +1,14 @@
-﻿
+﻿.tapiz{
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+    justify-content:flex-start;
+     height:100%;
+    width:100%;
+}
+
 #wrapper{
 	width:100%;
 }
