--- a/WebLegemClient/src/css/plantillas/header.css
+++ b/WebLegemClient/src/css/plantillas/header.css
@@ -1,44 +1,63 @@
 ﻿.header {
     width:100%;
-    height:40px;
+    height:55px;
     position:relative;
-    background:#37404A;
-    border-bottom:1px solid #30383e;
+    background:rgba(17, 21, 21, 0.70);
+    border-bottom:1px solid #6c767d;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.50);
+    z-index:1;
 }
 
 .figura_logo{
-    background:#2e9815;
-    display: inline-block;
-    height: 75px;
-    margin-left:0; 
-    margin-top: 0; 
-    position: relative; 
-    width: 120px;
+    height: 125px;
+    width: 150px;
+    position:relative;
+    margin-left:10px; 
+    margin-top: -5px; 
+    z-index:1;
+    
+    -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.85));
+    filter        : drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.85));
 }
 
-.figura_logo:before {
-    content: ""; 
-    border-style: solid;
-    border-width: 50px 60px 0 60px;
-    border-color:#2e9815 transparent transparent transparent;
-    z-index: 1;
 
-    height: 0; 
-    left: 0; 
-    position: absolute; 
-    top: 75px; 
-    width: 0; 
+.nombre_pagina {
+    text-align:center;
+    padding-bottom:40px;
+    font-family:'Century Gothic';
+    font-weight:900;
+    font-size: 100px;
+    color:white;
+    text-shadow: 1px 1px  rgba(140,140,140,0.6), -1px -1px 1px rgba(0, 0, 0, .67);
 }
+
+.escudo_pagina{
+    position:absolute;
+    margin-top: 5px;
+    height: 95px;
+    top:-5px;
+    left:29px;
+}
+
+.contenedor_nombre_escudo {
+    
+}
+
+#svg_image {
+    stroke:#010365;
+    stroke-width: 3px;
+}
+
+
 
 
 .btn_deslizable{
     background:rgba(55, 64, 74, 0.0);
     border:none;
     width:auto;
-    height:40px;
+    height:55px;
     color:white;
     font-size:medium;
     margin-right:10px;
@@ -60,9 +79,28 @@
 }
 
 .btn_deslizable:hover{ 
-    /*background: rgba(255, 255, 255, 0.11);*/
+    background: rgba(255, 255, 255, 0.50);
 }
 .btn_deslizable:hover span, .btn_deslizable:hover p{ 
-    color:rgb(255, 106, 0);
+    color:#fff;
+}
+
+.btn_deslizable:before{
+    content:"";
+    width:0;
+    height:4px;
+    background:white;   
+    position:absolute;
+    left:50%;
+    bottom:0;
+    -moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+}
+
+.btn_deslizable:hover:before{
+    width:100%;
+    left:0;
 }
 
