--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -2,23 +2,22 @@
     width:420px;
     margin: 0 auto;
     padding: 40px 0 0 0;
-    border-radius:0.2rem ;    
-    z-index: 9999;
+    border-radius:0.2rem ;
 }
 
-    .contenedor_login:before {
-        content: '';
-        background-image: url('../../recursos/header/pexels-photo-46274 (2).jpeg');
-        background-size: cover;
-        -webkit-filter: brightness(50%);
-        filter: brightness(50%);
-        width: 100%;
-        height: 80vh;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -3;
-    }
+.contenedor_login:before {
+    content: '';
+    background-image: url('../../recursos/header/pexels-photo-46274 (2).jpeg');
+    background-size: cover;
+    -webkit-filter: brightness(50%);
+    filter: brightness(50%);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index:-1;
+}
 
 .subtitulo {
     background:transparent;
