--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="contenedor_login">
 
-    <div class="contenedor_universal">
+    <div>
         <div class="titulo">WEBLEGEM</div>
         <form class="form_login" name="form_login" novalidate>
 
@@ -8,48 +8,35 @@
                 <p>Ingreso al Sistema</p>
             </div>
 
+            <!----------------------------------------------------->
             <div ng-messages ng-show="form_login.usuario.$invalid">
                 <div class="a_validacion" ng-message ng-show="form_login.usuario.$dirty">Complete este campo.</div>
             </div>
-
-            <div class="candado">
-                <input required name="usuario" class="input_login" id="user" type="text" ng-model="vm.user.nombre" placeholder="Nombre de Usuario *" />
-
-
-                <div class="circulo1">
-                    <div style=" margin-top:10px;">
-                        <span class="ico-user" id="user_login"></span>
-                    </div>
-                </div>
+            <div class="input_container_login">
+                <input required name="usuario" class="a_input" id="user" type="text" ng-model="vm.user.nombre" placeholder="Nombre de Usuario *" />
+                <div class="circulo1"><span class="ico-user" id="user_login"></span></div>
             </div>
 
+            <!----------------------------------------------------->
             <div ng-messages ng-show="form_login.password.$invalid">
                 <div class="a_validacion" ng-message ng-show="form_login.password.$dirty">Complete este campo.</div>
             </div>
-
-            <div class="candado">
-
-                <input required class="input_login" name="password" type="password" ng-model="vm.user.password" placeholder="Contraseña *" />
-
-                <div class="circulo2">
-                    <div style=" margin-top:10px;">
-                        <span class="ico-lock" id="user_lock"></span>
-                    </div>
-                </div>
-
+            <div class="input_container_login">
+                <input required class="a_input size_input_login" name="password" type="password" ng-model="vm.user.password" placeholder="Contraseña *" />
+                <div class="circulo2"><span class="ico-lock" id="user_lock"></span></div>
             </div>
 
+            <!----------------------------------------------------->
             <div>
-                <div class="a_validacion" style="padding-bottom:20px; color:#6d6d6d">* Campos obligatorios.</div>
+                <div class="a_validacion" style="padding-bottom:20px; color:#444">* Campos obligatorios.</div>
+            </div>
+            <div class="a_centrado">
+                <button class="btn_con_ico" type="submit" ng-click="vm.logIn()">
+                    <span class="ico-sign-in tamano_botones_1"></span>INGRESAR
+                </button>
             </div>
 
-            <button class="btn_con_ico_login" style="display:block; margin:auto;" type="submit" ng-click="vm.logIn()">
-                <span class="texto_login">INGRESAR</span>
-                <span class="ico-sign-in icono_login"></span>
-            </button>
-
-            <a href="#" style="font-family:'Century Gothic'; font-size:small;"> Olvide mi contraseña </a>
-
+            <a href="#" class="olvide_contraseña"> Olvide mi contraseña </a>
         </form>
     </div>
 </div>
