--- a/WebLegemClient/src/css/elementos/button.css
+++ b/WebLegemClient/src/css/elementos/button.css
@@ -11,7 +11,7 @@
 	letter-spacing: 0.04rem;
 	color: #fff;
 	border:0;
-    margin:0;
+    margin:auto 0;
     padding:7px 5px 7px 30px;
     min-width:110px;
     cursor:pointer;
