--- a/WebLegemClient/src/css/estilos_weblegem.css
+++ b/WebLegemClient/src/css/estilos_weblegem.css
@@ -5,13 +5,13 @@
     color: white;
     text-align:center;
     height:auto;
-    background:  #00443a;
+    background: #11564c;   
     display:block;
     padding:0.5em;
     font-family:sans-serif;
     font-size:1.1em;
     font-weight:600;
-    border-bottom:4px solid rgb(169, 171, 174);
+    border-bottom:4px solid  #089672;
 }
 
 /*-------------------*/
@@ -40,5 +40,13 @@
 
 .divisor_gestion_documental{
     border: solid 1px #434e58;
+}
+
+/*Disposiciones*/
+
+.a_centrado{
+    display:flex;
+    justify-content:center;
+    width:100%;
 }
 
