--- a/WebLegemClient/src/css/noticias.css
+++ b/WebLegemClient/src/css/noticias.css
@@ -15,6 +15,7 @@
     content: '';
     background-image: url('../recursos/header/paisaje.jpg');
     background-size: cover;
+    background-attachment:fixed;
     width: 100%;
     height: 100%;
     position: absolute;
