--- a/WebLegemClient/src/css/plantillas/busqueda.css
+++ b/WebLegemClient/src/css/plantillas/busqueda.css
@@ -5,12 +5,8 @@
     flex-direction: column;
     align-items: center;
     justify-content:flex-start;
-     height:100%;
+    height:100%;
     width:100%;
-}
-
-#wrapper{
-	width:100%;
 }
 
 #tabContainer {
@@ -58,7 +54,8 @@
 }
 
 .input_busqueda{
-    width:80%;
+    width:50%;
+    margin-right:10px;
 }
 
 /*------Busqueda Avanzada-------*/
