--- a/WebLegemClient/src/css/plantillas/header2.css
+++ b/WebLegemClient/src/css/plantillas/header2.css
@@ -1,40 +1,11 @@
 ﻿.header2 {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     display: -webkit-flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 5px solid #37404A;
-}
-
-
-
-
-.hijo_right_header2 {
-    display: -webkit-flex;
-    display: flex;
-    -ms-flex-direction: column;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-
-    -ms-align-content: flex-end;
-    -webkit-align-content: flex-end;
-    align-content: flex-end;
-
-    height: 100%;
-}
-
-
-.contenedor_pag_principal {
-    display: flex;
-    -ms-align-content: center;
-    -webkit-align-content: center;
-    align-content: center;
     justify-content: center;
-    -ms-flex-direction: column;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
+    align-items: center;
+    border-bottom: 2px solid #37404A;
+    background: #464d55;
+    background-image: url('../../recursos/header/dark_Tire.png');
 }
