--- a/WebLegemClient/src/css/plantillas/busqueda.css
+++ b/WebLegemClient/src/css/plantillas/busqueda.css
@@ -60,8 +60,12 @@
 
 /*------Busqueda Avanzada-------*/
 #busqueda_padre{
+
     display:flex;
+    display:-webkit-flex;
+
     width:100%;
+    height:100%;
 }
 
 #busqueda_left{
@@ -77,13 +81,16 @@
     box-shadow: 0 0 0 1px rgba(153, 153, 153, 0.40);
 }
 
-#busqueda_right{
-    -ms-flex-direction:column;
-    -webkit-flex-direction:column;
-    flex-direction:column;
-    padding:10px 30px;
-    width:90%; 
-    height:auto;
+#busqueda_right {
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -ms-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    display:flex;
+    padding: 10px 30px;
+    width: 90%;
 }
 
 .input_busqueda_a{
@@ -258,11 +265,15 @@
 /*-----Fin Mensajes Busqueda------*/
 
 /*-------Dibujo Busqueda----------*/
-.dibujo_busqueda{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100%;
+.dibujo_busqueda {
+    -ms-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    display: flex;
+    display: -webkit-flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .dibujo_busqueda span{
